packages/compiler/tests/fixtures/valid/fetch-dynamic-url.svelte
<script>
  let data = fetch(someVar)
</script>
<text>Loading</text>
