packages/compiler/tests/fixtures/invalid/fetch-usage.svelte
<script>
  const data = fetch('/api')
</script>
<text>Loading</text>
